dockerize the application and application code updated

--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "lint": "eslint --fix-dry-run ."
+    "start": "node app.js",
+    "dev": "nodemon -L app.js",
+    "lint": "eslint --fix-dry-run .",
+    "generate:jwt:keys": "node runner.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@graphql-tools/load-files": "^6.5.2",
+    "apollo-server": "^3.6.1",
     "dotenv": "^10.0.0",
+    "graphql": "^15.8.0",
     "graphql-tools": "^8.2.0",
-    "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.14",
     "mysql": "^2.18.1"
