--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "node app.js",
     "dev": "nodemon -L app.js",
     "lint": "eslint --fix-dry-run .",
-    "generate:jwt:keys": "node runner.js"
+    "generate:jwt:keys": "node runner.js",
+    "db:migrate": "npx knex migrate:latest",
+    "db:migrate:production": "npx knex migrate:latest --env production",
+    "db:rollback": "npx knex knex migrate:rollback",
+    "db:rollback:all": "npx knex knex migrate:rollback --all"
   },
   "keywords": [],
   "author": "",
