--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "generate:jwt:keys": "node runner.js",
     "db:migrate": "npx knex migrate:latest",
     "db:migrate:production": "npx knex migrate:latest --env production",
-    "db:rollback": "npx knex knex migrate:rollback",
-    "db:rollback:all": "npx knex knex migrate:rollback --all"
+    "db:rollback": "npx knex migrate:rollback",
+    "db:rollback:all": "npx knex migrate:rollback --all"
   },
   "keywords": [],
   "author": "",
